--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </nav>
         <div class="header-content container">
            <h1 class="page-title">DIGITAL МАРКЕТИНГ <br> С ГАРАНТИЕЙ РЕЗУЛЬТАТА</h1>
-           <h3 class="title-secondary">Интернет-маркетинг с увеличением звонков <br> и заявок на <span class="text-important">200% за 10 дней.</span> <br> Гарантированно. Официально.</h3>
+           <h3 class="title-secondary">Интернет-маркетинг с увеличением звонков <br class="hide-sm"> и заявок на <span class="text-important">200% за 10 дней.</span> <br class="hide-sm"> Гарантированно. Официально.</h3>
             <div class="download-presentation">
                 <a href="#" class="btn-primary">Скачать презентацию</a>
             </div>
