--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -102,6 +103,211 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="container">
+            <div class="presentation">
+                <div class="container">
+                    <h2 class="title-primary">Поисковый маркетинг</h2>
+                    <div class="row">
+                        <div class="item">
+                            <div class="img">
+                                <img src="./imgs/reklama-v-poiske-google.png" alt="">
+                            </div>
+                            <h3 class="title">Контекстная реклама</h3>
+                            <p class="text"> <b>Контекстная реклама в поисковых машинах</b> Google Ads и Yandex Direct дает отличные результаты, уже через 3 дня при небольших вложениях.</p>
+                            <a data-target="Контекстная реклама" class="btn-primary open-request-modal-btn">Подробнее...</a>
+                        </div>
+                        <div class="item">
+                            <div class="img">
+                                <img src="./imgs/seo-prodvijenie.png" alt="">
+                            </div>
+                            <h3 class="title">SEO продвижение</h3>
+                            <p class="text">это фундамент Вашего успеха в интернете: топовые позиции во всех популярных поисковых системах + доверие пользователей.</p>
+                            <a data-target="SEO продвижение" class="btn-primary open-request-modal-btn">Подробнее...</a>
+                        </div>
+                        <div class="item">
+                            <div class="img">
+                                <img src="./imgs/Google-maps.png" alt="">
+                            </div>
+                            <h3 class="title">Google My Business</h3>
+                            <p class="text">Google Maps – это лидер среди современных картографических сервисов, отметим Вашу компанию и теперь Вас легко найдут</p>
+                            <a data-target="Google My Business" class="btn-primary open-request-modal-btn">Подробнее...</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="presentation">
+                <div class="container">
+                    <h2 class="title-primary">Поисковый маркетинг</h2>
+                    <div class="row">
+                        <div class="item">
+                            <div class="img">
+                                <img src="./imgs/rek-yandex.png" alt="">
+                            </div>
+                            <h3 class="title">Медийная реклама Яндекс</h3>
+                            <p class="text"><b>Контекстная реклама в поисковых машинах</b> Google Ads и Yandex Direct дает отличные результаты, уже через 3 дня при небольших вложениях.</p>
+                            <a data-target="Контекстная реклама" class="btn-primary open-request-modal-btn">Подробнее...</a>
+                        </div>
+                        <div class="item">
+                            <div class="img">
+                                <img src="./imgs/rek-google.png" alt="">
+                            </div>
+                            <h3 class="title">Контекстная реклама в поисковых машинах</h3>
+                            <p class="text"><b>Медийная реклама Google</b> — это та реклама, которая размещается на крупных Интернет-порталах (тематические ресурсы) с большой посещаемостью.</p>
+                            <a data-target="SEO продвижение" class="btn-primary open-request-modal-btn">Подробнее...</a>
+                        </div>
+                        <div class="item">
+                            <div class="img">
+                                <img src="./imgs/retarget.png" alt="">
+                            </div>
+                            <h3 class="title">Ремаркетинг/Ретаргетинг</h3>
+                            <p class="text"> <b>Ретаргетинг</b> вернёт Ваших потенциальных клиентов. Этот эффективный прием позволяет показывать рекламу тем, кто уже был на Вашем сайте.</p>
+                            <a data-target="Google My Business" class="btn-primary open-request-modal-btn">Подробнее...</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="presentation">
+                <div class="container">
+                    <h2 class="title-primary">Разработка сайтов</h2>
+                    <div class="row">
+                        <div class="item">
+                            <div class="img">
+                                <img src="./imgs/site-dev.png" alt="">
+                            </div>
+                            <h3 class="title">Создание корп. сайтов</h3>
+                            <p class="text"><b>Корпоративный сайт</b> — это лицо Вашего бизнеса которое формирует представление пользователей о Вас и демонстрирует имидж компании.</p>
+                            <a data-target="Контекстная реклама" class="btn-primary open-request-modal-btn">Подробнее...</a>
+                        </div>
+                        <div class="item">
+                            <div class="img">
+                                <img src="./imgs/site-tech-mission.png" alt="">
+                            </div>
+                            <h3 class="title">Разработка landing page</h3>
+                            <p class="text"><b>Landing Page</b> — катализатор увеличения Ваших продаж. Ваш клиент точно заинтересуется предложением и совершит желаемое Вами действие.</p>
+                            <a data-target="SEO продвижение" class="btn-primary open-request-modal-btn">Подробнее...</a>
+                        </div>
+                        <div class="item">
+                            <div class="img">
+                                <img src="./imgs/corp-site.png" alt="">
+                            </div>
+                            <h3 class="title">Заказать интернет-магазин</h3>
+                            <p class="text">Создадим шустрый, удобный и стильный <b>интернет-магазин</b> для любого бизнеса с учетом современных трендов.</p>
+                            <a data-target="Google My Business" class="btn-primary open-request-modal-btn">Подробнее...</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="complex-ad">
+                <h2 class="title-primary">Комплексная реклама</h2>
+                <h4 class="title-tertiary">Выберите тип Вашей компании</h4>
+
+                <div class="row">
+                    <a class="item">
+                        <h4 class="heading">Туристическое агентство</h4>
+                        <div class="img">
+                            <img src="./imgs/tur-agency.png" alt="Туристическое агентство">
+                        </div>
+                    </a>
+                    <a class="item">
+                        <h4 class="heading">Медицинский центр</h4>
+                        <div class="img">
+                            <img src="./imgs/medicine.png" alt="Медицинский центр">
+                        </div>
+                    </a>
+                    <a class="item">
+                        <h4 class="heading">Банк</h4>
+                        <div class="img">
+                            <img src="./imgs/bank-card.png" alt="Банк">
+                        </div>
+                    </a>
+                    <a class="item">
+                        <h4 class="heading">Лизинговая компания</h4>
+                        <div class="img">
+                            <img src="./imgs/lising.png" alt="Лизинговая компания">
+                        </div>
+                    </a>
+                    <a class="item">
+                        <h4 class="heading">Туристическое агентство</h4>
+                        <div class="img">
+                            <img src="./imgs/tur-agency.png" alt="Туристическое агентство">
+                        </div>
+                    </a>
+                    <a class="item">
+                        <h4 class="heading">Строительная фирма</h4>
+                        <div class="img">
+                            <img src="./imgs/construction-site.png" alt="Строительная фирма">
+                        </div>
+                    </a>
+                    <a class="item">
+                        <h4 class="heading">Учебный центр</h4>
+                        <div class="img">
+                            <img src="./imgs/education-center.png" alt="Учебный центр">
+                        </div>
+                    </a>
+                    <a class="item">
+                        <h4 class="heading">Интернет провайдер</h4>
+                        <div class="img">
+                            <img src="./imgs/inet-provider.png" alt="Интернет провайдер">
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="why-we">
+            <div class="container">
+                <h3 class="title-primary">Почему мы</h3>
+                <h4 class="title-tertiary"><span class="text-important">internet-marketing.uz</span> — первое digital-агентство в Узбекистане, имеющее статус сертифицированного агента Google и Яндекс.</h4>
+                <div class="flex-evenly">
+                    <div class="certificate">
+                        <img src="./imgs/google-partner.png" alt="Google Партнёры">
+                        <p>Реклама от сертифицированного партнера Google</p>
+                    </div>
+                    <div class="certificate">
+                        <img src="./imgs/yandex-certificated.png" alt="Сертифицированное агентство Яндекс">
+                        <p>Реклама от сертифицированного партнера Яндекса в Узбекистане</p>
+                    </div>
+                    <div class="certificate">
+                        <img src="./imgs/yandex-expert.png" alt="Эксперт Яндекса по обучению">
+                        <p>Ведение Вашей рекламной кампании от сертифицированного эксперта</p>
+                    </div>
+                </div>
+                <div class="flex-between info">
+                    <div>
+                        <img src="./imgs/check-icon.png" alt="Иконка галочки">
+                    </div>
+                    <p>Не сливайте деньги в пустую, доверьте продвижение Вашей компании профессионалам.</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
      <!-- Fonts -->
      <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/brands.css'/>
      <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.min.css'/>
