--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/footer.css">
+
 </head>
 
 <body>
@@ -281,8 +283,284 @@
                 </div>
             </div>
         </div>
-    </main>
+        <div class="container">
+            <div class="about-us">
+                <h2 class="title-primary">Сертифицированное рекламное агентство в Ташкенте</h2>
+                <h4 class="title-tertiary">Google и Яндекс доверяют нам</h4>
+                <div class="flex-center properties">
+                    <div class="item">
+                        <span class="primary-heading">1-й</span>
+                        <p>официальный партнер <br> Google и Яндекс в Узбекистане</p>
+                    </div>
+                    <div class="item">
+                        <span class="primary-heading">10</span>
+                        <p>специалистов <br> в штате</p>
+                    </div>
+                    <div class="item">
+                        <span class="primary-heading">20</span>
+                        <p>сертификатов Google и Яндекс <br> получено нашими спецами</p>
+                    </div>
+                </div>
+                <div class="swiper-container aboutus-slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="./imgs/ourteam-1.png" alt="Team work by our team"></div>
+                        <div class="swiper-slide"><img src="./imgs/ourteam-1.png" alt="Team work by our team"></div>
+                        <div class="swiper-slide"><img src="./imgs/ourteam-1.png" alt="Team work by our team"></div>
+                        <div class="swiper-slide"><img src="./imgs/ourteam-1.png" alt="Team work by our team"></div>
+                    </div>
 
+                    <div class="swiper-button-prev">
+                        <img src="./imgs/left-arrow.png" alt="Arrow to left">
+                    </div>
+                    <div class="swiper-button-next">
+                        <img src="./imgs/right-arrow.png" alt="Arrow to right">
+                    </div>
+                </div>
+                <p class="info">Статус Сертифицированного агентства говорит о высоком качестве работы с системой Яндекс. Сертификат выдается по результатам проверки знаний специалистов агентства и анализа эффективности применения этих знаний на практике.</p>
+                <div class="sm-banner">
+                    <p>Наше рекламное агентство в Ташкенте готово помочь <br> Вам обрести новых клиентов и увеличить свои продажи!</p>
+                    <img src="./imgs/pencil.png" class="pencil" alt="">
+                </div>
+            </div>
+            <div class="projects presentation">
+                <h2 class="title-primary">Наши другие проекты</h2>
+                <div class="row-inner">
+                    <div class="item">
+                        <h3 class="title">Сервис обратных звонков</h3>
+
+                        <div class="img">
+                            <img src="./imgs/recall.png" alt="Project">
+                        </div>
+                        <p class="text">Увеличение конверсии сайта на 300%. Мгновенный обратный звонок. Не теряйте
+                            ни одного клиента!</p>
+                    </div>
+                    <div class="item">
+                        <h3 class="title">Школа digital маркетинга</h3>
+
+                        <div class="img">
+                            <img src="./imgs/top-expert.png" alt="Project">
+                        </div>
+                        <p class="text">Освойте профессию будущего и станьте востребованным специалистом!</p>
+                    </div>
+                    <div class="item">
+                        <h3 class="title">Сервис для проведения вебинаров</h3>
+
+                        <div class="img">
+                            <img src="./imgs/camon.png" alt="Project">
+                        </div>
+                        <p class="text">Смотрите вебинары от ведущих специалистов Узбекистана и СНГ бесплатно, а
+                            также проводите свои вебинары в Tas-ix!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="clients">
+                <div class="container">
+                    <h2 class="title-primary">Наши клиенты</h2>
+                    <div class="swiper-container clients-slider">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper">
+                            <!-- Slides -->
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/imzo_logo.webp" type="image/webp">
+                                    <img src="./imgs/logos/imzo_logo.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/murat_buildings_logo.webp" type="image/webp">
+                                    <img src="./imgs/logos/murat_buildings_logo.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/logo-paynet.webp" type="image/webp">
+                                    <img src="../imgs/logos/logo-paynet.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/payme-logo.webp" type="image/webp">
+                                    <img src="./imgs/logos/payme-logo.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/beeline-logo.webp" type="image/webp">
+                                    <img src="./imgs/logos/beeline-logo.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/ums-logonew1.webp" type="image/webp">
+                                    <img src="./imgs/logos/ums-logonew1.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/hamkorbank.webp" type="image/webp">
+                                    <img src="./imgs/logos/hamkorbank.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/travelsystem.webp" type="image/webp">
+                                    <img src="./imgs/logos/travelsystem.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/sarkor.webp" type="image/webp">
+                                    <img src="./imgs/logos/sarkor.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/nova-stroy.webp" type="image/webp">
+                                    <img src="./imgs/logos/nova-stroy.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/faberlic.webp" type="image/webp">
+                                    <img src="./imgs/logos/faberlic.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/billur-com.webp" type="image/webp">
+                                    <img src="./imgs/logos/billur-com.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/uzautotrailer-logo-1.webp" type="image/webp">
+                                    <img src="./imgs/logos/uzautotrailer-logo-1.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/fasad-doma.webp" type="image/webp">
+                                    <img src="./imgs/logos/fasad-doma.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/aquaheat_logo.webp" type="image/webp">
+                                    <img src="./imgs/logos/aquaheat_logo.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/zebra.webp" type="image/webp">
+                                    <img src="./imgs/logos/zebra.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/infin.webp" type="image/webp">
+                                    <img src="./imgs/logos/infin.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/goodween_logo.webp" type="image/webp">
+                                    <img src="./imgs/logos/goodween_logo.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/autograph_logo.webp" type="image/webp">
+                                    <img src="./imgs/logos/autograph_logo.jpg" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/be-the-change.webp" type="image/webp">
+                                    <img src="./imgs/logos/be-the-change.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/sagbon-mebel.webp" type="image/webp">
+                                    <img src="./imgs/logos/sagbon-mebel.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/vades.webp" type="image/webp">
+                                    <img src="./imgs/logos/vades.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/isocom.webp" type="image/webp">
+                                    <img src="./imgs/logos/isocom.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="swiper-slide">
+                                <picture>
+                                    <source srcset="./imgs/logos/webp/ups-logo.webp" type="image/webp">
+                                    <img src="./imgs/logos/ups-logo.jpg" alt="">
+                                </picture>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="container">
+            <div class="flex-between wrapper">
+                <div class="left">
+                    <h2 class="title-primary hide-sm">У Вас остались вопросы?</h2>
+                    <h4 class="title-tertiary hide-sm">Вы можете задать их сейчас!</h4>
+
+                    <div class="contacts">
+                        <h2 class="title-primary">Наши контакты</h2>
+
+                        <div class="fields row-inner">
+                            <div class="icon">
+                                <img src="./imgs/house-icon.png" alt="Иконка дома">
+                            </div>
+                            <div class="content">
+                                <p>Узбекистан, г. Ташкент <br> ул. Абдуллы Каххара 47 3-й этаж, 3-й кабинет</p>
+                            </div>
+                        </div>
+                        <div class="fields row-inner">
+                            <div class="icon">
+                                <img src="./imgs/envelope-icon.png" alt="Иконка дома">
+                            </div>
+                            <div class="content">
+                                <p><a href="mailto:info@company.uz">info@company.uz</a></p>
+                            </div>
+                        </div>
+                        <div class="fields row-inner">
+                            <div class="icon">
+                                <img src="./imgs/phone-icon.png" alt="Иконка дома">
+                            </div>
+                            <div class="content">
+                                <p><a href="tel:+998717777777">+998(71) 777-77-77</a></p>
+                                <p><a href="tel:+998717777777">+998(71) 666-66-66</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <h2 class="title-primary show-sm">У Вас остались вопросы?</h2>
+                    <h4 class="title-tertiary show-sm">Вы можете задать их сейчас!</h4>
+                    <form class="form">
+                        <p class="info">Отправьте заявку и получите <span class="text-important">бесплатную консультацию</span> от экспертов в области интернет-рекламы.</p>
+                        <input type="text" name="name" class="form-input" placeholder="Ваше имя" required>
+                        <input type="tel" name="name" class="form-input" placeholder="Ваш телефон" required>
+                        <button type="submit" class="btn-primary form-submit">Отправить</button>
+                        <p class="ps">Нажимая на кнопку вы соглашаетесь с <a href="#" class="text-important">политикой конфиденциальности</a></p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
