--- a/index.html
+++ b/index.html
@@ -553,50 +553,27 @@
                     <form class="form">
                         <p class="info">Отправьте заявку и получите <span class="text-important">бесплатную консультацию</span> от экспертов в области интернет-рекламы.</p>
                         <input type="text" name="name" class="form-input" placeholder="Ваше имя" required>
-                        <input type="tel" name="name" class="form-input" placeholder="Ваш телефон" required>
+                        <input type="tel" name="phone" class="form-input" placeholder="Ваш телефон" required>
                         <button type="submit" class="btn-primary form-submit">Отправить</button>
                         <p class="ps">Нажимая на кнопку вы соглашаетесь с <a href="#" class="text-important">политикой конфиденциальности</a></p>
                     </form>
                 </div>
             </div>
         </div>
-    </footer>
+        </footer>
 
 
+        <!-- Fonts -->
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/brands.css' />
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.min.css' />
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css' />
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css' />
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-     <!-- Fonts -->
-     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/brands.css'/>
-     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.min.css'/>
-     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css'/>
-
-     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css'/>
-
-     <!-- Js scripts -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js'></script>
-    <script src="./js/fontobserver.js"></script>
-    <script src="./js/script.js"></script>
-</body>
+        <!-- Js scripts -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js'></script>
+        <script src="./js/fontobserver.js"></script>
+        <script src="./js/script.js"></script>
+        </body>
 
 </html>
