--- a/inner/index.html
+++ b/inner/index.html
@@ -162,6 +162,133 @@
                     <img src="../imgs/right-arrow.png" alt="Arrow to right">
                 </div>
             </div>
+
+            <div class="advantages">
+                <div class="row">
+                    <div class="item">
+                        <div class="icon">
+                            <img src="../imgs/check-circle.png" alt="Check">
+                        </div>
+                        <h3 class="heading">Уникальный дизайн</h3>
+                        <p class="text">Дизайн страницы, созданной специально для Вас. Все индивидуально и уникально!</p>
+                    </div>
+                    <div class="item">
+                        <div class="icon">
+                            <img src="../imgs/check-circle.png" alt="Check">
+                        </div>
+                        <h3 class="heading">Четкая концепция сайтов</h3>
+                        <p class="text">Понятная структура и удобство наших сайтов – это залог высокой конверсии и эффективности.</p>
+                    </div>
+                    <div class="item">
+                        <div class="icon">
+                            <img src="../imgs/check-circle.png" alt="Check">
+                        </div>
+                        <h3 class="heading">Продающая структура</h3>
+                        <p class="text">Участие психолога и маркетолога дают нашим сайтам больше возможностей в продажах.</p>
+                    </div>
+                    <div class="item">
+                        <div class="icon">
+                            <img src="../imgs/check-circle.png" alt="Check">
+                        </div>
+                        <h3 class="heading">Очень быстро работают</h3>
+                        <p class="text">Наши лендинги сделаны на HTML, в следствии чего загружаются мгновенно.</p>
+                    </div>
+                    <div class="item">
+                        <div class="icon">
+                            <img src="../imgs/check-circle.png" alt="Check">
+                        </div>
+                        <h3 class="heading">Домен и хостинг на 3 года</h3>
+                        <p class="text">Дарим нашим клиентам профессиональный хостинг и доменное имя на 3 года.</p>
+                    </div>
+                    <div class="item">
+                        <div class="icon">
+                            <img src="../imgs/check-circle.png" alt="Check">
+                        </div>
+                        <h3 class="heading">Качественный копирайтинг</h3>
+                        <p class="text">Штатный копирайтер напишет интересный, продающий текст о товарах и услугах</p>
+                    </div>
+                    <div class="item">
+                        <div class="icon">
+                            <img src="../imgs/check-circle.png" alt="Check">
+                        </div>
+                        <h3 class="heading">50% скидка на рекламу</h3>
+                        <p class="text">Заказав лендинг пейдж в нашей компании, Вы получаете 50% скидку на любую рекламу</p>
+                    </div>
+                    <div class="item">
+                        <div class="icon">
+                            <img src="../imgs/check-circle.png" alt="Check">
+                        </div>
+                        <h3 class="heading">Facebook в подарок</h3>
+                        <p class="text">Оформим страницу в Facebook, Instagram за 600 000 сум <b style="color: #000;">бесплатно</b></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="banner-accordion">
+            <div class="container">
+                <div class="accordion">
+                    <div class="item">
+                        <input type="checkbox" class="checkbox" id="accordion-checkbox-1">
+                        <label class="label" for="accordion-checkbox-1">
+                            <div class="check-icon">
+                                <span>+</span>
+                            </div>
+                            <div class="check-title">
+                                <p>Что показывается в результатах поиска кроме адреса?</p>
+                            </div>
+                        </label>
+                        <div class="text">
+                            <p>В сервисе Google Maps помимо адреса можно разместить описание компании, телефоны, часы работы, фотографии. Также в информационном блоке показываются отзывы о компании, оставленные клиентами.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <input type="checkbox" class="checkbox" id="accordion-checkbox-2">
+                        <label class="label" for="accordion-checkbox-2">
+                            <div class="check-icon">
+                                <span>+</span>
+                            </div>
+                            <div class="check-title">
+                                <p>Как региональная привязка влияет на результаты поиска?</p>
+                            </div>
+                        </label>
+                        <div class="text">
+                            <p>В сервисе Google Maps помимо адреса можно разместить описание компании, телефоны, часы работы, фотографии. Также в информационном блоке показываются отзывы о компании, оставленные клиентами.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <input type="checkbox" class="checkbox" id="accordion-checkbox-3">
+                        <label class="label" for="accordion-checkbox-3">
+                            <div class="check-icon">
+                                <span>+</span>
+                            </div>
+                            <div class="check-title">
+                                <p>Какая связь между Google Maps и Google Мой бизнес?</p>
+                            </div>
+                        </label>
+                        <div class="text">
+                            <p>В сервисе Google Maps помимо адреса можно разместить описание компании, телефоны, часы работы, фотографии. Также в информационном блоке показываются отзывы о компании, оставленные клиентами.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <input type="checkbox" class="checkbox" id="accordion-checkbox-4">
+                        <label class="label" for="accordion-checkbox-4">
+                            <div class="check-icon">
+                                <span>+</span>
+                            </div>
+                            <div class="check-title">
+                                <p>Чем Google Maps поможет в привлечении пользователей?</p>
+                            </div>
+                        </label>
+                        <div class="text">
+                            <p>В сервисе Google Maps помимо адреса можно разместить описание компании, телефоны, часы работы, фотографии. Также в информационном блоке показываются отзывы о компании, оставленные клиентами.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
             <div class="about-us">
                 <h2 class="title-primary">Сертифицированное рекламное агентство в Ташкенте</h2>
                 <h4 class="title-tertiary">Google и Яндекс доверяют нам</h4>
