--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
                         <ul class="list">
                             <li class="item">
-                                <a href="#" class="link">Услуги</a>
+                                <a href="./inner/" class="link">Услуги</a>
                             </li>
                             <li class="item">
                                 <a href="#" class="link">Портфолио</a>
